--- a/protobuf/Makefile
+++ b/protobuf/Makefile
@@ -1,3 +1,3 @@
 
 all:
-	protoc --java_out=../java/src/main/java/ WhisperTextProtocol.proto LocalStorageProtocol.proto FingerprintProtocol.proto
+	protoc --java_out=lite:../java/src/main/java/ WhisperTextProtocol.proto LocalStorageProtocol.proto FingerprintProtocol.proto
